--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body>
     <!-- HEADER -->
     <header class="container">
-        <p class="bg-dark text-white text-right mb-0">
+        <p class="text-white text-right mb-0">
             <i class="fas fa-phone-alt"></i>
             <span>0330 123 4567</span>
             <i class="fa fa-search"></i>
         </p>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="#"><img src="./img/logo.svg" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#movieNavbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -63,7 +63,19 @@
             <div class="carousel-inner ">
               <div class="carousel-item active">
                 <img class="d-block w-100" src="./img/hero-1.jpg" alt="First slide">
-                <div class=" container carousel-caption d-none d-md-block ">
+                <div class="container carousel-caption d-none d-md-block ">
+                    <p>Action, Adventure, Fantasy</p>
+                    <h2>End of the World: Part II</h2>
+                    <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum.</p>
+                    <div class="carousel__trailer">
+                        <span>PG</span>
+                        <button class="btn "><i class="fa fa-play"></i>Play trailer</button>
+                    </div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="./img/hero-2.jpg" alt="Second slide">
+                <div class="container carousel-caption d-none d-md-block">
                     <p>Action, Adventure, Fantasy</p>
                     <h2>End of the World: Part II</h2>
                     <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum.</p>
@@ -74,26 +86,14 @@
                   </div>
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="./img/hero-2.jpg" alt="Second slide">
-                <div class="carousel-caption d-none d-md-block">
-                    <p>Action, Adventure, Fantasy</p>
-                    <h2>End of the World: Part II</h2>
-                    <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum.</p>
-                    <div class="carousel__trailer">
-                        <span>PG</span>
-                        <button><i class="fa fa-play"></i>Play trailer</button>
-                    </div>
-                  </div>
-              </div>
-              <div class="carousel-item">
                 <img class="d-block w-100" src="./img/hero-3.jpg" alt="Third slide">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="container carousel-caption d-none d-md-block">
                     <p>Action, Adventure, Fantasy</p>
                     <h2>End of the World: Part II</h2>
                     <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum.</p>
                     <div class="carousel__trailer">
                         <span>PG</span>
-                        <button><i class="fa fa-play"></i>Play trailer</button>
+                        <button class="btn"><i class="fa fa-play"></i>Play trailer</button>
                     </div>
                   </div>
               </div>
@@ -108,10 +108,168 @@
             </a> -->
           </div>
     </section>
-    <section class="newIn"></section>
-    <section class="showTime"></section>
-    <section class="comingSoon">
 
+    <!-- NEW IN -->
+    <section class="newIn container">
+      <h3>NEW IN</h3>
+      <div class="newIn__content">
+        <div class="row">
+          <div class="col-3">
+            <div class="newIn__img">
+              <img src="./img/movie-1.jpg " class="img-fluid" alt="">
+              <div class="newIn__overlay"></div>
+              <div class="newIn__play">
+                <!-- icon play va chu trang -->
+              </div>
+            </div>
+            <div class="newIn__text">
+              <p>The last post</p>
+              <div>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="newIn__img">
+              <img src="./img/movie-2.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="newIn__text">
+              <p>The last post</p>
+              <div>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="newIn__img">
+              <img src="./img/movie-3.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="newIn__text">
+              <p>The last post</p>
+              <div>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="newIn__img">
+              <img src="./img/movie-4.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="newIn__text">
+              <p>The last post</p>
+              <div>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- SHOW TIME -->
+    <section class="showTime container py-5">
+      <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" id="home-tab" data-toggle="tab" href="#mon" role="tab" aria-controls="home" aria-selected="true">MON</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="profile-tab" data-toggle="tab" href="#tue" role="tab" aria-controls="profile" aria-selected="false">TUE</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="contact-tab" data-toggle="tab" href="#today" role="tab" aria-controls="contact" aria-selected="false">TODAY </a>
+        </li>
+      </ul>
+
+      <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="mon" role="tabpanel" aria-labelledby="home-tab">
+          <div class="row">
+            <div class="col-2">
+              <img src="./img/movie-6.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="col-10">             
+              <p>ACTION, ADVENTURE, FANTASY</p>
+              <h3>It's over</h3>
+              <p>European mercenaries searching for black powder become embroiled in the defense of It's over of China against a horde of monstrous creatures.</p>
+              <a href="#">FULL SYNOPSIS<i class="fa fa-angle-right"></i></a>
+              <div class="row">
+                <div class="col-8">
+                  <i class="fa fa-clock"></i>
+                  <span>VIEWING TIMES </span>
+                  <button type="button" class="btn btn-secondary" disabled>14:45</button>
+                  <button type="button" class="btn btn-secondary">18:30</button>
+                  <button type="button" class="btn btn-secondary">20:30</button>
+                  <button type="button" class="btn btn-secondary">24:45</button>         
+                </div>
+                <div class="col-4 text-right">
+                  <span>105 MIN</span>
+                  <span>15</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="py-2"></div>
+          <div class="row">
+            <div class="col-2">
+              <img src="./img/movie-7.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="col-10">             
+              <p>ACTION, ADVENTURE, FANTASY</p>
+              <h3>It's over</h3>
+              <p>European mercenaries searching for black powder become embroiled in the defense of It's over of China against a horde of monstrous creatures.</p>
+              <a href="#">FULL SYNOPSIS<i class="fa fa-angle-right"></i></a>
+              <div class="row">
+                <div class="col-8">
+                  <i class="fa fa-clock"></i>
+                  <span>VIEWING TIMES </span>
+                  <button type="button" class="btn btn-secondary" disabled>14:45</button>
+                  <button type="button" class="btn btn-secondary">18:30</button>
+                  <button type="button" class="btn btn-secondary">20:30</button>
+                  <button type="button" class="btn btn-secondary">24:45</button>         
+                </div>
+                <div class="col-4 text-right">
+                  <span>105 MIN</span>
+                  <span>15</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- COMING SOON -->
+    <!-- chua nen den -->
+    <section class="comingSoon">
+      <!-- chua hinh nen -->
+      <div class="comingSoon__bg"></div>
+      <div class="comingSoon__content container py-5">
+        <h2>COMING SOON</h2>
+        <div class="row">
+          <div class="col-6">
+            <p>DRAMA, THRILLER</p>
+            <h3>DRAMA, THRILLER</h3>
+            <p>A dramatization of the April 2010 disaster, when the offshore drilling rig Deepwater Horizon exploded and created the worst oil spill in U.S. history.</p>
+          </div>
+          <div class="col-6">
+            <img src="./img/slide-3-video.png" alt="">
+          </div>
+        </div>
+      </div>
     </section>
     <section class="movieList"></section>
     <section class="contact"></section>
