--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <h3>NEW IN</h3>
       <div class="newIn__content">
         <div class="row">
-          <div class="col-3">
+          <div class="col-6 col-md-3">
             <div class="newIn__img">
               <img src="./img/movie-1.jpg " class="img-fluid" alt="">
               <div class="newIn__overlay"></div>
@@ -133,7 +133,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3">
+          <div class="col-6 col-md-3">
             <div class="newIn__img">
               <img src="./img/movie-2.jpg" class="img-fluid" alt="">
             </div>
@@ -148,7 +148,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3">
+          <div class="col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
             <div class="newIn__img">
               <img src="./img/movie-3.jpg" class="img-fluid" alt="">
             </div>
@@ -163,7 +163,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3">
+          <div class=" col-6 col-sm-6 col-md-3 col-lg-3 col-xl-3">
             <div class="newIn__img">
               <img src="./img/movie-4.jpg" class="img-fluid" alt="">
             </div>
@@ -198,16 +198,16 @@
       <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="mon" role="tabpanel" aria-labelledby="home-tab">
           <div class="row">
-            <div class="col-2">
+            <div class="col-12 col-md-2 ">
               <img src="./img/movie-6.jpg" class="img-fluid" alt="">
             </div>
-            <div class="col-10">             
+            <div class="col-12 col-md-10">             
               <p>ACTION, ADVENTURE, FANTASY</p>
               <h3>It's over</h3>
               <p>European mercenaries searching for black powder become embroiled in the defense of It's over of China against a horde of monstrous creatures.</p>
               <a href="#">FULL SYNOPSIS<i class="fa fa-angle-right"></i></a>
               <div class="row">
-                <div class="col-8">
+                <div class="col-12 col-md-9 col-lg-8">
                   <i class="fa fa-clock"></i>
                   <span>VIEWING TIMES </span>
                   <button type="button" class="btn btn-secondary" disabled>14:45</button>
@@ -215,14 +215,16 @@
                   <button type="button" class="btn btn-secondary">20:30</button>
                   <button type="button" class="btn btn-secondary">24:45</button>         
                 </div>
-                <div class="col-4 text-right">
+                <div class="col-12 col-md-3 col-lg-4 text-sm-right">
                   <span>105 MIN</span>
                   <span>15</span>
                 </div>
               </div>
             </div>
           </div>
+
           <div class="py-2"></div>
+
           <div class="row">
             <div class="col-2">
               <img src="./img/movie-7.jpg" class="img-fluid" alt="">
