--- a/index.html
+++ b/index.html
@@ -1120,7 +1120,7 @@
       <div class="comingSoon__content container pb-5">
         <h2>COMING SOON</h2>
         <div class="row comingSoon__slide">
-          <div class="col-6">
+          <div class="col-12 col-sm-6 comingSoon__text">
             <span class="title">DRAMA, THRILLER</span>
             <h3 class="pt-1 name-movie">The Hangover Part III</h3>
             <div class="star">
@@ -1140,16 +1140,61 @@
               <span class="moreInfo">more info<i class="fa fa-angle-right"></i></span>
             </a>
           </div>
-          <div class="col-6">
+          <div class="col-12 col-sm-6 comingSoon__video">
             <img src="./img/slide-3-video.png" alt="">
-            <i class="fa fa-play"></i>
+            <div class="playIcon">
+              <i class="fa fa-play"></i>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <section class="movieList">
       <div class="container">
-
+        <div class="row">
+          <div class="col-4 col-md-3 col-lg-2">
+            <div class="movieList__item">
+              <img src="./img/movie-11.jpg" alt="">
+              <h5>Deepwater horizon</h5>
+              <p>07 September, 2017</p>
+            </div>
+          </div>
+          <div class="col-4 col-md-3 col-lg-2">
+            <div class="movieList__item">
+              <img src="./img/movie-12.jpg" alt="">
+              <h5>Deepwater horizon</h5>
+              <p>07 September, 2017</p>
+            </div>
+          </div>
+          <div class="col-4 col-md-3 col-lg-2">
+            <div class="movieList__item">
+              <img src="./img/movie-13.jpg" alt="">
+              <h5>Deepwater horizon</h5>
+              <p>07 September, 2017</p>
+            </div>
+          </div>
+          <div class="d-none d-md-block col-md-3 col-lg-2">
+            <div class="movieList__item">
+              <img src="./img/movie-14.jpg" alt="">
+              <h5>Deepwater horizon</h5>
+              <p>07 September, 2017</p>
+            </div>
+          </div>
+          <div class=" d-none d-lg-block col-lg-2">
+            <div class="movieList__item">
+              <img src="./img/movie-6.jpg" alt="">
+              <h5>Deepwater horizon</h5>
+              <p>07 September, 2017</p>
+            </div>
+          </div>
+          <div class=" d-none d-lg-block col-lg-2 ">
+            <div class="movieList__item">
+              <img src="./img/movie-8.jpg" alt="">
+              <h5>Deepwater horizon</h5>
+              <p>07 September, 2017</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <section class="contact"></section>
