--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <div class="carousel-inner ">
               <div class="carousel-item active">
                 <img class="d-block w-100" src="./img/hero-1.jpg" alt="First slide">
+                <img class="carousel_arrow" src="./img/arrow.png" alt="">
                 <div class="container carousel-caption d-none d-md-block ">
                     <h2>Action, Adventure, Fantasy</h2>
                     <h1>End of the World: Part II</h1>
