--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <div class="carousel-item active">
                 <img class="d-block w-100" src="./img/hero-1.jpg" alt="First slide">
                 <img class="carousel_arrow" src="./img/arrow.png" alt="">
-                <div class="container carousel-caption d-none d-md-block ">
+                <div class="container carousel-caption col-md-9">
                     <h2>Action, Adventure, Fantasy</h2>
                     <h1>End of the World: Part II</h1>
                     <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum.</p>
