--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <header class="container">
         <p class="text-white text-right mb-0">
             <i class="fas fa-phone-alt"></i>
-            <span>0330 123 4567</span>
+            <span class="phone">0330 123 4567</span>
             <i class="fa fa-search"></i>
         </p>
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-md navbar-dark">
             <a class="navbar-brand" href="#"><img src="./img/logo.svg" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#movieNavbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"><i class="fa fa-bars"></i></span>
             </button>
           
             <div class="collapse navbar-collapse" id="movieNavbar">
@@ -47,9 +47,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#">CONTACT</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">LOG IN</a>
-                </li>
               </ul>
             </div>
         </nav>
@@ -65,9 +62,10 @@
             </ol>
             <div class="carousel-inner ">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="./img/hero-1.jpg" alt="First slide">
+                <div class="carousel__bg"></div>
                 <img class="carousel_arrow" src="./img/arrow.png" alt="">
-                <div class="container carousel-caption d-none d-md-block ">
+                <div class="container carousel-caption row">
+                  <div class="col-md-9 col-12">
                     <h2>Action, Adventure, Fantasy</h2>
                     <h1>End of the World: Part II</h1>
                     <p>Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum.</p>
@@ -76,6 +74,7 @@
                         <button class="btn "><i class="fa fa-play"></i>Play trailer</button>
                     </div>
                   </div>
+                </div>
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100" src="./img/hero-2.jpg" alt="Second slide">
